--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,9 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
+  background-color: blanchedalmond;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
