--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
 #root {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  margin: 0;
+  padding: 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
   flex-direction: column;
-  height: 100vh;
 }
