--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,8 @@
 .FooterSpace {
   width: 100%;
-  height: 20px;
+  height: 40px;
   background-color: black;
   border: 1px solid yellow;
   position: fixed;
-  bottom: 0px;
+  bottom: 0;
 }
