--- a/src/components/PageCentre/PageCentre.css
+++ b/src/components/PageCentre/PageCentre.css
@@ -1,14 +1,22 @@
 .PageCentre {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* border: 2px solid green; */
+  justify-content: center;
   width: 100%;
+  height: 100%;
 }
 
 .logoContainer {
   width: fit-content;
   height: fit-content;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
 }
 
 .logoHome {
@@ -17,4 +25,29 @@
   width: 500x;
   height: 500px;
   padding: 0px;
+  opacity: 0.8;
+}
+
+.mianImagesSpaceContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  box-sizing: border-box;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.mainImageContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.mainImage {
+  height: 100%;
+  width: 100%;
 }
