--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,12 @@
 body {
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
-  background-color: blanchedalmond;
+  background-color: rgb(46, 23, 48);
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  height: 100%;
+  width: 100%;
+  overflow-x: hidden;
 }
