--- a/src/components/GalleryCard/GalleryCard.css
+++ b/src/components/GalleryCard/GalleryCard.css
@@ -1,15 +1,21 @@
 .GalleryCard {
-  width: auto;
-  height: auto;
+  width: 350px;
+  height: 350px;
   display: flex;
   padding: 5px 20px 20px 20px;
 }
 
 .galleryImageContainer {
-  border: 2px solid white;
+  width: 98%;
+  height: 98%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .galleryImage {
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  border: 2px solid white;
 }
