--- a/src/components/AboutPageCentre/AboutPageCentre.css
+++ b/src/components/AboutPageCentre/AboutPageCentre.css
@@ -1,15 +1,17 @@
 .aboutUsPageCentre {
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .aboutPhoto {
-  width: 100vw;
-  height: 100vh;
   position: absolute;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
 }
 
 .AboutUsContainer {
@@ -22,13 +24,14 @@
   border: 2px solid white;
   border-radius: 20px;
   color: white;
-  font-size: 21px;
+
   width: 80%;
-  height: 80%;
+  min-height: 80%;
 }
 
 .aboutContentContainer {
   position: absolute;
+  font-size: 20px;
   width: 95%;
   height: 100%;
   display: flex;
@@ -36,4 +39,17 @@
   align-items: center;
   flex-direction: column;
   z-index: 900;
+}
+
+.aboutRegardsContent {
+  margin: 5px;
+}
+
+@media only screen and (max-width: 600px) {
+  .AboutUsContainer {
+    width: 90%;
+  }
+  .aboutContentContainer {
+    font-size: 10px;
+  }
 }
