--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,7 @@
 .FooterSpace {
   width: 100%;
-  height: 40px;
-  background-color: black;
-  border: 1px solid yellow;
+  height: 60px;
+  background-color: rgba(70, 70, 70, 0.486);
   position: fixed;
   bottom: 0;
 }
