--- a/src/components/PricingPageCentre/PricingPageCentre.css
+++ b/src/components/PricingPageCentre/PricingPageCentre.css
@@ -18,7 +18,8 @@
 .pricingBackgroundPhoto {
   width: 100%;
   height: 100%;
-  opacity: 0.75;
+  background-size: cover;
+  background-position: center;
 }
 
 /* --------------------------------- Menu Content ------------------------------= */
