--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  height: 100%;
-  width: 100%;
+  max-height: 100vh;
+  width: 100vw;
   overflow-x: hidden;
 }
