--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,59 @@
 .FooterSpace {
-  width: 100%;
+  width: 100vw;
   height: 60px;
-  background-color: rgba(70, 70, 70, 0.486);
+  background-color: rgba(0, 0, 0, 0.788);
   position: fixed;
   bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.footerIcons {
+  width: 96%;
+  height: 96%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+}
+
+.facebookIconContainer,
+.locationIconContainer,
+.callIconContainer {
+  width: 30%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.facebookIcon,
+.locationIcon,
+.callIcon {
+  width: 35px;
+  height: 35px;
+  display: flex;
+}
+
+.facebookIcon {
+  color: rgb(11, 172, 226);
+}
+
+.locationIcon {
+  color: rgb(255, 255, 255);
+}
+
+.callIcon {
+  color: rgb(15, 250, 15);
+  padding-right: 20px;
+}
+
+.callContent {
+  font-size: 20px;
+  margin: 0;
+  padding: 0;
+  color: white;
+  color: rgb(15, 250, 15);
 }
