--- a/src/components/AboutPageCentre/AboutPageCentre.css
+++ b/src/components/AboutPageCentre/AboutPageCentre.css
@@ -1,55 +1,116 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 .aboutUsPageCentre {
-  width: 100%;
-  min-height: 100vh;
+  max-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
+  font-family: "Barlow Condensed", sans-serif;
+  font-weight: 100;
+  font-style: normal;
 }
 
 .aboutPhoto {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  min-width: 100vw;
+  min-height: 100vh;
   background-size: cover;
   background-position: center;
 }
 
 .AboutUsContainer {
-  background-color: rgba(0, 0, 0, 0.61);
-  position: relative;
+  position: fixed;
+  background-color: rgba(74, 21, 78, 0.705);
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  box-sizing: border-box;
+  flex-wrap: wrap;
   border: 2px solid white;
   border-radius: 20px;
   color: white;
-
-  width: 80%;
-  min-height: 80%;
+  width: 98%;
+  height: fit-content;
+  z-index: 700;
 }
 
 .aboutContentContainer {
-  position: absolute;
-  font-size: 20px;
-  width: 95%;
-  height: 100%;
+  font-size: 25px;
+  width: 97%;
+  height: fit-content;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
-  z-index: 900;
+  z-index: 700;
+}
+
+.aboutTitleContent {
+  margin: 2px;
+  padding: 0px;
 }
 
 .aboutRegardsContent {
-  margin: 5px;
+  margin: 1px;
 }
 
-@media only screen and (max-width: 600px) {
-  .AboutUsContainer {
-    width: 90%;
-  }
+@media only screen and (max-width: 1281px) {
   .aboutContentContainer {
-    font-size: 10px;
+    font-size: 23px;
+  }
+}
+@media only screen and (max-width: 1025px) {
+  .aboutContentContainer {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 892px) {
+  .aboutContentContainer {
+    font-size: 18px;
+  }
+}
+
+@media only screen and (max-width: 714px) {
+  .aboutContentContainer {
+    font-size: auto;
+  }
+
+  @media only screen and (max-width: 634px) {
+    .aboutContentContainer {
+      font-size: 17px;
+    }
+  }
+
+  @media only screen and (max-width: 567px) {
+    .aboutContentContainer {
+      font-size: 16px;
+    }
+  }
+
+  @media only screen and (max-width: 492px) {
+    .aboutContentContainer {
+      font-size: 15px;
+    }
+  }
+
+  @media only screen and (max-width: 412px) {
+    .aboutContentContainer {
+      font-size: 14px;
+    }
+  }
+
+  @media only screen and (max-width: 380px) {
+    .aboutContentContainer {
+      font-size: 13px;
+    }
+  }
+
+  @media only screen and (max-width: 365px) {
+    .aboutContentContainer {
+      font-size: 12px;
+    }
   }
 }
